1.05.4 Release